Refactoring OBS to jdbcTemplate